--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,10 @@
-/* No CSS *//*# sourceMappingURL=style.css.map */
+body {
+  margin: 0;
+  background: purple;
+}
+
+header {
+  height: 20vmin;
+  background: blue;
+}
+/*# sourceMappingURL=style.css.map */
