--- a/css/style.scss
+++ b/css/style.scss
@@ -1,5 +1,5 @@
 body{
-    background: #0b326dee !important;
+    background: darkblue !important;
 }
 
 .wikiHead {
@@ -32,8 +32,8 @@ img {
 input{
     width: 200px;
     font-weight: normal;
-    background: #0b326dee !important;
-    border: 3px solid #9de63fee !important;
+    background: darkblue !important;
+    border: 3px solid lime !important;
     border-radius: 25px;
     outline: none;
     padding: 5px 12px;
